userlist: fix scrollbars in user lists

--- a/src/css/UserList.css
+++ b/src/css/UserList.css
@@ -1,4 +1,5 @@
 @component UserList {
+  overflow-y: scroll;
 }
 
 @component UserRow {
